# Project-Tessera

./: .gitignore  .gitmodules  4_logo.svg.import  4_logob.svg.import  CMakeLists.txt  CONTRIBUTING.md  NOTICE.md  Project_Tessera_Logo.svg.import  README.md  SConstruct  STYLE_GUIDE.md  T_logo.svg.import  export_presets.cfg  project.godot
assets/shaders/: unit_team_color.gdshader  unit_team_color.gdshader.uid
docs/: ADRs.md  C1_Context.puml  C2_Container.puml  C3_Component.puml  Data_Extraction_Architecture.puml  Data_Extraction_Sequence.puml  decisions.md
extensions/gdext_niflib/: gdext_niflib.cpp  gdext_niflib.hpp  register_types.cpp
extensions/gdext_niflib/src/: gdext_niflib.cpp  gdext_niflib.hpp
extensions/gdext_niflib/subsystems/: nif_animation.cpp  nif_collision.cpp  nif_controllers.cpp  nif_coordinate.cpp  nif_coordinate.hpp  nif_extra_data.cpp  nif_geometry.cpp  nif_lights.cpp  nif_materials.cpp  nif_particles.cpp  nif_scene_graph.cpp  nif_skinning.cpp
extensions/src/gdext_niflib/: gdext_niflib.cpp  gdext_niflib.hpp
host/: CMakeLists.txt
host/relay/: .gitignore  build.bat
host/relay/include/: relay_api.h
host/relay/lib71/: msvcp71.def  msvcr71.def
host/relay/src/: crt_eh_shim.cpp  crt_shim.c  exsup.asm  relay_main.cpp  relay_stubs.cpp  relay_types.h  relay_utility.cpp  relay_xml.cpp
host/src/: data_extractor.cpp  data_extractor.h  dll_loader.cpp  dll_loader.h  host_callbacks.cpp  host_callbacks.h  main.cpp  message_protocol.cpp  message_protocol.h  python_bridge.cpp  python_bridge.h  tcp_server.cpp  tcp_server.h
host/src/bridge/: iface_data_stream.cpp  iface_data_stream.h  iface_engine.cpp  iface_engine.h  iface_entity.cpp  iface_entity.h  iface_event_reporter.cpp  iface_event_reporter.h  iface_fastar.cpp  iface_fastar.h  iface_feature.cpp  iface_feature.h  iface_flag_entity.cpp  iface_flag_entity.h  iface_ini_parser.cpp  iface_ini_parser.h  iface_interface.cpp  iface_interface.h  iface_plot_builder.cpp  iface_plot_builder.h  iface_python.cpp  iface_python.h  iface_river.cpp  iface_river.h  iface_route.cpp  iface_route.h  iface_symbol.cpp  iface_symbol.h  iface_types.h  iface_utility.cpp  iface_utility.h  iface_xml.cpp  iface_xml.h
host/tools/: README.md  cdb_alloczero.txt  cdb_crash288k.txt  cdb_first_av.txt  cdb_heap_corruption.txt  cdb_init.txt  cdb_msgbox.txt  cdb_pageheap_detail.txt  cdb_pageheap_first_av.txt  debug_init_client.py  test_client.py
scenes/: 00_SplashScreenScene.tscn  03_MenuScene.tscn  04_GameWorldScene.tscn
scripts/: AssetCycler.gd  AssetCycler.gd.uid  AxisIndicator.gd  AxisIndicator.gd.uid  GameWorldScene.gd  Global.gd  InitScene.gd  MenuScene.gd  PlayerPivot.gd  SplashScreenScene.gd  UnitCycler.gd  UnitCycler.gd.uid  VFS.gd  VFS.gd.uid  VerificationScene.gd
scripts/classes/: ImageTextureUtil.gd
scripts/host/: HostBridge.gd  HostBridge.gd.uid
scripts/loaders/: FPK_Loader.gd  Font_Loader.gd
